# auth_demo

./: .env.example  Makefile  README.md  pyproject.toml
app/: main.py
app/application/: hanlers.py  utils.py
app/application/api/v1/: dependencies.py
app/application/api/v1/auth/: handlers.py
app/application/api/v1/secret/: handlers.py  schemas.py
app/application/services/: keycloak.py
app/logic/: container.py
app/logic/services/: keycloak.py  permissions.py
app/settings/: base.py  config.py  log.py  logger.py  permissions.py  urils.py
assets/: auth-demo-realm-realm.json  realm-export.json
config/: config.yaml  logger_config.yaml
demo-auth-backend-app/: .env.example  .gitignore  Dockerfile  docker-entrypoint.sh
demo-auth-backend-app/app/: main.py
demo-auth-backend-app/app/application/api/: exception_handlers.py  schemas.py
demo-auth-backend-app/app/application/services/: keycloak.py
demo-auth-backend-app/app/domain/user/: entity.py
demo-auth-backend-app/app/infra/: repositories.py
demo-auth-backend-app/app/infra/repositories/: secret.py  user.py
demo-auth-backend-app/app/infra/services/: user.py
demo-auth-backend-app/app/logic/: container.py
demo-auth-backend-app/app/logic/services/: permissions.py
demo-auth-backend-app/app/settings/: base.py  config.py  logger.py  permissions.py
demo-auth-frontend-app/: .env  Dockerfile  index.html  package.json
demo-auth-frontend-app/src/: App.css  App.jsx  SecretPage.jsx  keycloak.js  main.jsx
docker/: app.yaml  keycloak.yaml
tools/: get_acess_token.sh
(+5 files in other folders)
